2016-03-15  Tom Assouline  <tom.assouline@supelec.fr>

	Implement EQI criterion for noisy optimization

	* sampling/@stk_sampcrit_eqi/stk_sampcrit_eqi.m: New function.
	* sampling/@stk_sampcrit_eqi/msfeval.m: New function.
	* examples/02_design_of_experiments/stk_example_doe05.m: Example.
	script

2016-03-15  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_sampcrit_modelbased/feval.m: Pass additional args to msfeval

	* sampling/@stk_sampcrit_modelbased/feval.m: Make it possible to
	pass additional arguments to msfeval.

2016-03-15  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_testfun_twobumps.m: Change the sign of the test function

	* examples/test_functions/stk_testfun_twobumps.m: Change the sign
	of the test function (it looked more like "two hollows" than "two
	bumps"...).

2016-03-08  Julien Bect  <julien.bect@centralesupelec.fr>

	Make it possible to update heteroscedastic models

	* core/@stk_model_gpposterior/set_lognoisevariance.m: Provide a
	more informative error message when the size is wrong. Add unit
	tests.
	* core/@stk_model_gpposterior/stk_model_update.m: Handle the
	heteroscedastic case thanks to a new input argument. Provide
	informative error messages. Add unit tests.
	* sampling/@stk_sampcrit_modelbased/stk_model_update.m: Pass the
	additional input argument, unchaged.
	* sampling/@stk_sampcrit_thresholdbasedoptim/stk_model_update.m:
	Idem.

2016-03-06  Julien Bect  <julien.bect@centralesupelec.fr>

	Define and use three datasets based on TwoBumps

	* examples/datasets/stk_dataset_twobumps.m: New function, which
	defines three datasets based on TwoBumps.
	* examples/01_kriging_basics/stk_example_kb01.m: Use dataset
	'noiseless'. Move the noisy case to stk_example_kb01n.
	* examples/01_kriging_basics/stk_example_kb01n.m: New example
	script, which corresponds to the noisy case of the previous
	version of stk_example_kb01.
	* examples/01_kriging_basics/stk_example_kb02.m: Use dataset